# i2s_mic

./: CMakeLists.txt  LICENSE  README.md  agc.hh  blockdc.hh  clipper.hh  complex.hh  cordic.hh  delay.hh  generate.cc  hilbert.hh  i2s_mic.c  i2s_mic.cc  i2s_mic.pio  schmidl_cox.hh  sma.hh  trigger.hh
